Fix: Add workflows list to workflow_run trigger for CI failure tracking
The workflow_run event requires specifying which workflows to monitor.
Without the workflows list, GitHub cannot properly register the trigger.

--- a/.github/workflows/ghe-ci-failure.yml
+++ b/.github/workflows/ghe-ci-failure.yml
@@ -6,6 +6,7 @@ name: "GHE: CI Failure"
 
 on:
   workflow_run:
+    workflows: ["Claude Code", "Claude Code Review"]
     types: [completed]
 
 concurrency:
