Fix: Remove security events requiring GitHub Advanced Security
Security events (dependabot_alert, code_scanning_alert, secret_scanning_alert)
require GitHub Advanced Security features not available on this repository.

Changed ghe-security-alert.yml to use workflow_dispatch only:
- Manual trigger with alert_type input (dependabot/code_scanning/secret_scanning)
- Can simulate security alerts for testing
- Will work without Advanced Security features enabled

The workflow will query existing alerts via gh api when manually triggered.

--- a/.github/workflows/ghe-security-alert.yml
+++ b/.github/workflows/ghe-security-alert.yml
@@ -7,16 +7,7 @@
 name: "GHE: Security Alert"
 
 on:
-  # Dependabot alerts (requires Dependabot to be enabled)
-  dependabot_alert:
-    types: [created]
-  # Code scanning alerts (requires GitHub Code Scanning or third-party scanner)
-  code_scanning_alert:
-    types: [created, reopened]
-  # Secret scanning alerts (requires GitHub Secret Scanning)
-  secret_scanning_alert:
-    types: [created]
-  # Manual trigger for testing
+  # Manual trigger for testing and primary use
   workflow_dispatch:
     inputs:
       alert_type:
