Add moderation system and complete label unification
NEW: Ares moderation agent
- Handles issues flagged with needs-moderation or possible-spam
- Conservative by default - recommends actions, doesn't auto-delete
- Spam scoring system with confidence levels
- Escalation protocol to repo owner

Label System Updates:
- Added Moderation Labels: needs-moderation, possible-spam
- Added Urgency Labels: urgent, security
- Added Source Labels: source:pr, source:ci, ci-failure
- Added Operational Labels: owner-review, awaiting-response
- Updated phase-gate.md with Argos/Ares/Chronos permissions

Complete phase:/type: prefix removal:
- README.md, setup.md, automation-design.md
- All GitHub Actions examples
- hooks.json, all SKILL.md files
- Now uses simple labels: dev, test, review, complete

Files added:
- agents/ares.md (moderation agent)

Files modified (12):
- agents/phase-gate.md (label categories, permissions)
- docs/automation-design.md (labels, routing table)
- commands/setup.md (label creation)
- README.md, hooks/hooks.json
- examples/github-actions/*.yml
- skills/ghe-*/SKILL.md

--- a/plugins/ghe/examples/github-actions/ghe-assistant.yml
+++ b/plugins/ghe/examples/github-actions/ghe-assistant.yml
@@ -46,12 +46,11 @@ jobs:
               - TEST: Testing and validation
               - REVIEW: Code review before merge
 
-              Each phase has its own issue thread (type:dev, type:test, type:review).
+              Each phase has its own issue thread (dev, test, review).
               Threads track work via checkpoint comments posted by developers.
 
               GHE LABELS:
-              - type:dev / type:test / type:review - Thread type
-              - phase:dev / phase:test / phase:review - Current phase
+              - dev / test / review - Thread type and phase
               - ready - Available to claim
               - in-progress - Being worked on
               - blocked - Has a blocker
